# platform-integrity-checker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS.md  Directory.Build.props  Directory.Packages.props  README.md  compose.yaml  pic.sln
.github/: labeler.yml  labels.yml
.github/workflows/: README_frogbot.md  ci_cd.yml  frogbot-scan-pull-request.yml  frogbot-scan-repository.yml
helm/: README.md
helm/pic-backend/: publish-chart.sh  values.yaml
helm/pic-backend/templates/: NOTES.txt
helm/pic-backend/templates/tests/: test-connection.yaml
helm/pic-frontend/: Chart.yaml  publish-chart.sh  values.yaml
helm/pic-frontend/templates/: deployment.yaml  ingress.yaml
pic.ApiService/: Dockerfile  Program.cs  pic.ApiService.csproj
pic.ApiService/Properties/: launchSettings.json
pic.AppHost/: Program.cs
pic.AppHost/Properties/: launchSettings.json
pic.ServiceDefaults/: Extensions.cs
pic.Web/: Dockerfile  Program.cs  StatusApiClient.cs  WeatherApiClient.cs  appsettings.Development.json  pic.Web.csproj
pic.Web/Components/: App.razor  Routes.razor  _Imports.razor
pic.Web/Components/Layout/: MainLayout.razor  NavMenu.razor
pic.Web/Components/Pages/: Counter.razor  Error.razor  Home.razor  Weather.razor
pic.Web/Properties/: launchSettings.json
pic/helm/pic-backend/: .helmignore  Chart.yaml  upgrade-cisl.sh  upgrade.sh
pic/helm/pic-backend/templates/: _helpers.tpl  deployment.yaml  service.yaml
pic/helm/pic-frontend/: upgrade-cisl.sh  upgrade.sh
pic/helm/pic-frontend/templates/: _helpers.tpl  service.yaml
pic/helm/pic-frontend/templates/tests/: test-connection.yaml
pic/src/: Directory.Build.props  compose.yaml  pic.sln
pic/src/pic.ApiService/: BUILD.bazel  Program.cs  appsettings.json
pic/src/pic.ApiService/Properties/: launchSettings.json
pic/src/pic.AppHost/: BUILD.bazel  Program.cs  pic.AppHost.csproj  pic_ApiService.ProjectMetadata.g.cs  pic_Web.ProjectMetadata.g.cs
pic/src/pic.AppHost/Properties/: launchSettings.json
pic/src/pic.ServiceDefaults/: BUILD.bazel  Extensions.cs  pic.ServiceDefaults.csproj
pic/src/pic.Web/: BUILD.bazel  Program.cs  pic.Web.csproj
pic/src/pic.Web/Components/: App.razor  _Imports.razor
pic/src/pic.Web/Properties/: launchSettings.json
pic/src/pic.Web/wwwroot/: app.css
src/: Directory.Build.props  Directory.Packages.props  compose.yaml
src/pic.ApiService/: CislComponent.cs  Component.cs  Program.cs  appsettings.Development.json  appsettings.json
src/pic.AppHost/: Program.cs  pic.AppHost.csproj
src/pic.AppHost/Properties/: launchSettings.json
src/pic.ServiceDefaults/: Extensions.cs
src/pic.Web/: Dockerfile  Program.cs  StatusApiClient.cs
src/pic.Web/Components/: App.razor  Routes.razor  _Imports.razor
src/pic.Web/Components/Layout/: NavMenu.razor
src/pic.Web/Components/Pages/: Home.razor  Status.razor
(+6 files in other folders)
