load("//:defs.bzl", "csharp_binary", "file_version_attributes")
load("//tools/build/rules/resources:ans_release_info.bzl", "ansys_copyright_attributes")

PIC_VERSION = "1.0.0"

attributes = ansys_copyright_attributes | file_version_attributes(PIC_VERSION)

csharp_binary(
    name = "pic.ApiService",
    srcs = [
        "Program.cs",
    ],
    appsetting_files = ["appsettings.json"],
    attributes = attributes,
    nullable = "enable",
    project_sdk = "web",
    run_analyzers = False,
    target_frameworks = ["net8.0"],
    targeting_packs = [
        "@paket.main//microsoft.aspnetcore.app.ref",
        "@paket.main//microsoft.netcore.app.ref",
    ],
    visibility = [
        "//ansys/pic:__subpackages__",
    ],
    deps = [
        "//ansys/pic/src/pic.ServiceDefaults",
        "@paket.main//microsoft.extensions.dependencyinjection",
        "@paket.main//microsoft.extensions.http.resilience",
        "@paket.main//microsoft.openapi",
        "@paket.main//swashbuckle.aspnetcore",
        "@paket.main//swashbuckle.aspnetcore.swagger",
        "@paket.main//swashbuckle.aspnetcore.swaggergen",
        "@paket.main//swashbuckle.aspnetcore.swaggerui",
    ],
)
