load("//:defs.bzl", "csharp_library", "file_version_attributes")
load("//tools/build/rules/resources:ans_release_info.bzl", "ansys_copyright_attributes")

PIC_VERSION = "1.0.0"

attributes = ansys_copyright_attributes | file_version_attributes(PIC_VERSION)

csharp_library(
    name = "pic.ServiceDefaults",
    srcs = [
        "Extensions.cs",
    ],
    attributes = attributes,
    nullable = "enable",
    project_sdk = "web",
    # Disable analyzers to fix CS9137 error
    # https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/compiler-messages/source-generator-errors#interceptors-are-experimental
    # https://github.com/bazelbuild/rules_dotnet/issues/414
    run_analyzers = False,
    target_frameworks = ["net8.0"],
    targeting_packs = [
        "@paket.main//microsoft.aspnetcore.app.ref",
        "@paket.main//microsoft.netcore.app.ref",
    ],
    visibility = [
        "//ansys/pic:__subpackages__",
    ],
    deps = [
        "@paket.main//microsoft.extensions.http.resilience",
        "@paket.main//microsoft.extensions.servicediscovery",
        "@paket.main//opentelemetry",
        "@paket.main//opentelemetry.api",
        "@paket.main//opentelemetry.api.providerbuilderextensions",
        "@paket.main//opentelemetry.exporter.opentelemetryprotocol",
        "@paket.main//opentelemetry.extensions.hosting",
        "@paket.main//opentelemetry.instrumentation.aspnetcore",
        "@paket.main//opentelemetry.instrumentation.http",
        "@paket.main//opentelemetry.instrumentation.runtime",
    ],
)
